--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 
     <main>
-
+        <!-- product section  -->
         <section class=" md:my-20 lg:my-80 flex justify-center">
             <div class="w-11/12">
                 <div class="flex flex-col md:flex-row lg:flex-row items-center justify-between gap-10">
@@ -250,7 +250,33 @@
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             </div>
-                            <p class="text-[#F85559]">Details</p>
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
+                            <dialog id="my_modal_1" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <div class="flex flex-col items-center space-y-0 lg:space-y-2">
+                                        <div class="lg:mb-4"><img src="/images/fruit6.png" alt="Shoes"
+                                                class="rounded-xl" /></div>
+                                        <h3 class="font-bold text-xl">Apple</h3>
+                                        <p class="">Professional employees are there for you to pick the most
+                                            amazing
+                                            and fresh fruits.</p>
+                                        <div>
+                                            <i class="fa-solid fa-star text-[#F85559]"></i>
+                                            <i class="fa-solid fa-star-half-stroke text-[#F85559]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                        </div>
+                                        <div class="modal-action">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                            <button class="btn bg-white text-[#F85559] border-[#F85559]">Close</button>
+                                            <button class="btn bg-[#F85559] text-white">Buy Now</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dialog>
+
 
                         </div>
                     </div>
@@ -270,7 +296,31 @@
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             </div>
-                            <p class="text-[#F85559]">Details</p>
+                            <button class="text-[#F85559]" onclick="my_modal_2.showModal()">Details</button>
+                            <dialog id="my_modal_2" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <div class="flex flex-col items-center space-y-0 lg:space-y-2">
+                                        <div class="lg:mb-4"><img src="/images/fruit7.png" alt="Shoes"
+                                                class="rounded-xl" /></div>
+                                        <h3 class="font-bold text-xl">Orange</h3>
+                                        <p class="">Professional employees are there for you to pick the most
+                                            amazing
+                                            and fresh fruits.</p>
+                                        <div>
+                                            <i class="fa-solid fa-star text-[#F85559]"></i>
+                                            <i class="fa-solid fa-star-half-stroke text-[#F85559]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                        </div>
+                                        <div class="modal-action">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                            <button class="btn bg-white text-[#F85559] border-[#F85559]">Close</button>
+                                            <button class="btn bg-[#F85559] text-white">Buy Now</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dialog>
 
                         </div>
                     </div>
@@ -290,7 +340,31 @@
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             </div>
-                            <p class="text-[#F85559]">Details</p>
+                            <button class="text-[#F85559]" onclick="my_modal_3.showModal()">Details</button>
+                            <dialog id="my_modal_3" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <div class="flex flex-col items-center space-y-0 lg:space-y-2">
+                                        <div class="lg:mb-4"><img src="/images/fruit8.png" alt="Shoes"
+                                                class="rounded-xl" /></div>
+                                        <h3 class="font-bold text-xl">Red Dragons</h3>
+                                        <p class="">Professional employees are there for you to pick the most
+                                            amazing
+                                            and fresh fruits.</p>
+                                        <div>
+                                            <i class="fa-solid fa-star text-[#F85559]"></i>
+                                            <i class="fa-solid fa-star-half-stroke text-[#F85559]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                        </div>
+                                        <div class="modal-action">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                            <button class="btn bg-white text-[#F85559] border-[#F85559]">Close</button>
+                                            <button class="btn bg-[#F85559] text-white">Buy Now</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dialog>
 
                         </div>
                     </div>
@@ -310,7 +384,31 @@
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             </div>
-                            <p class="text-[#F85559]">Details</p>
+                            <button class="text-[#F85559]" onclick="my_modal_4.showModal()">Details</button>
+                            <dialog id="my_modal_4" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <div class="flex flex-col items-center space-y-0 lg:space-y-2">
+                                        <div class="lg:mb-4"><img src="/images/fruit9.png" alt="Shoes"
+                                                class="rounded-xl" /></div>
+                                        <h3 class="font-bold text-xl">Banana</h3>
+                                        <p class="">Professional employees are there for you to pick the most
+                                            amazing
+                                            and fresh fruits.</p>
+                                        <div>
+                                            <i class="fa-solid fa-star text-[#F85559]"></i>
+                                            <i class="fa-solid fa-star-half-stroke text-[#F85559]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                            <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                        </div>
+                                        <div class="modal-action">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                            <button class="btn bg-white text-[#F85559] border-[#F85559]">Close</button>
+                                            <button class="btn bg-[#F85559] text-white">Buy Now</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dialog>
 
                         </div>
                     </div>
@@ -321,8 +419,8 @@
             </div>
         </section>
 
-
-        <section class="flex justify-center my-20">
+        <!-- team section  -->
+        <section class="flex justify-center my-20 lg:-my-40">
             <div style="background-image: url(/images/team.png);" class="w-11/12 text-white  ">
                 <div class="backdrop-brightness-50 p-20 h-full flex flex-col justify-center space-y-10">
                     <h1 class=" text-3xl md:text-4xl lg:text-5xl text-center font-bold">Meet the team section</h1>
@@ -385,7 +483,7 @@
 
         <!-- Why Choose Us Section  -->
 
-        <section class="flex flex-col items-center gap-10 justify-center">
+        <section class="flex flex-col items-center gap-10 justify-center lg:my-52">
             <h1 class="text-5xl text-center">Why Choose Us</h1>
             <p class="w-1/2 text-justify md:text-center lg:text-center">Contrary to popular belief, is not simply random
                 text. It has
@@ -444,7 +542,7 @@
                         </div>
                         <div class="space-y-2">
                             <h1 class="text-2xl font-bold">Integrated Supplier</h1>
-                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-40 font-extrabold">
+                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-64">
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
@@ -455,7 +553,7 @@
                         </div>
                         <div class="space-y-2">
                             <h1 class="text-2xl font-bold">Sustainable Practice</h1>
-                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-40">
+                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-64">
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
@@ -466,7 +564,7 @@
                         </div>
                         <div class="space-y-2">
                             <h1 class="text-2xl font-bold">The Benefits Only</h1>
-                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-40">
+                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-64">
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
@@ -479,8 +577,33 @@
 
     </main>
 
-
-    <footer>
+    <!-- foteer -->
+    <footer class="flex items-center justify-center mt-20 md:mt-20 lg:mt-0">
+        <div
+            class="w-11/12 md:w-full lg:w-full bg-black text-white flex flex-col items-center justify-center space-y-16 p-10">
+            <div>
+                <div class="lg:ml-10 flex items-center ">
+                    <img src="/images/logo.png" alt="">
+                    <h1 class=" md:text-3xl lg:text-4xl font-bold">Fruit Burst</h1>
+                </div>
+            </div>
+            <div class="grid grid-cols-3 md:grid-cols-6 lg:grid-cols-6 gap-5 md:gap-10 lg:gap-16 justify-around">
+                <p>Home</p>
+                <p>About Us</p>
+                <p>Shop</p>
+                <p>All Fruits</p>
+                <p>Support</p>
+                <p>My Account</p>
+            </div>
+            <div class="flex gap-10 justify-around">
+                <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-apple"></i>
+            </div>
+        </div>
 
     </footer>
 
